ppc64: argument and return type profiling, fix problem with popframe

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P3
    • 9
    • Affects Version/s: 9
    • Component/s: hotspot
    • None
    • b45
    • ppc

        This change contains the implementation of argument and return type profiling.
        It fixes a problem with jvmti popframe of method handle frames.
        It improves verify_oop assembly.
        Fix BoxLockNode::format().
        Add a release after patching stubs.

              Assignee:
              Goetz Lindenmaier
              Reporter:
              Goetz Lindenmaier
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

                Created:
                Updated:
                Resolved: