8066964: ppc64: argument and return type profiling, fix problem with popframe

Reviewed-by: roland, kvn